[gd_scene load_steps=6 format=3 uid="uid://qn8bybrpfejt"]

[ext_resource type="Script" path="res://scripts/gamemodes/singleplayer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bkq3d5427aexv" path="res://scenes/gameplay/player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://4wv8x42bqp3u" path="res://scenes/interface/pause_menu.tscn" id="2_okolh"]
[ext_resource type="FontFile" uid="uid://caaahe23vg56r" path="res://assets/fonts/m5x7.ttf" id="3_0qe68"]
[ext_resource type="PackedScene" uid="uid://dw7wr486ktdo8" path="res://scenes/interface/game_over_menu.tscn" id="5_b84wu"]

[node name="level" type="Node2D"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1024.0
offset_top = -128.0
offset_right = 1664.0
offset_bottom = 1408.0
color = Color(0, 0.235294, 0.341176, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 640)
zoom = Vector2(0.5, 0.5)

[node name="player" parent="." instance=ExtResource("2")]
z_index = 1
position = Vector2(320, 128)

[node name="start_timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 224.0
offset_top = 408.0
offset_right = 416.0
offset_bottom = 816.0
theme_override_fonts/font = ExtResource("3_0qe68")
theme_override_font_sizes/font_size = 512

[node name="pause_menu" parent="." instance=ExtResource("2_okolh")]
offset_left = -1024.0
offset_top = -128.0
offset_right = -1024.0
offset_bottom = -128.0

[node name="game_over_menu" parent="." instance=ExtResource("5_b84wu")]
offset_left = -1024.0
offset_top = -128.0
offset_right = -1024.0
offset_bottom = -128.0

[node name="line_counter" type="Label" parent="."]
z_index = 1
offset_left = 768.0
offset_top = 256.0
offset_right = 827.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("3_0qe68")
theme_override_font_sizes/font_size = 72
text = "Lines: 0"
